--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             android:name="id.tech.verificareolx.Olx_Activity_Gallery"
             android:theme="@style/ToolBarStyle"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="id.tech.verificareolx.Olx_GalleryView"
+            android:theme="@style/ToolBarStyle"
+            android:screenOrientation="portrait"></activity>
+
 
         <activity
             android:name="id.tech.verificareolx.HistoryNotification_Activity"
