--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.android.support:design:23.1.1'
     compile 'com.github.pinball83:masked-edittext:1.0.3'
+    compile 'com.google.code.gson:gson:2.2.4'
 }
