--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -133,6 +133,16 @@
             </intent-filter>
         </receiver>
 
+        <receiver android:name="id.tech.verificareolx.BootCompletedReceiver_UpdateJenisOutlet"
+            android:enabled="true"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </receiver>
+
         <receiver android:name="id.tech.verificareolx.NotifBroadcastReceiver" >
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
